--- a/site/src/assets/site/css/vortex_fomod.scss
+++ b/site/src/assets/site/css/vortex_fomod.scss
@@ -45,6 +45,8 @@
 
 #steps-vortex-container {
 
+    &:not(.active) { animation-duration: 0s !important; }
+
     // Cascading Stuff
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     font-family: "Roboto", sans-serif;
